# duckdb-faiss-ext

./: .gitignore  .gitmodules  CHANGES.md  CMakeCache.txt  CMakeLists.txt  Makefile  README-fc38.md  README.md  duckdb_gcc4.patch  extension_config.cmake  faiss-arm.patch  faiss-gpu.patch  faiss-linux.patch  faiss-mingw.patch  faiss.patch  ompconfigure  vcpkg.json
.github/workflows/: MacOS.yml  MainDistributionPipeline.yml  _distribution.yml  _extension_distribution.yml  distribution.yml
conformanceTests/: .gitignore  execute_queries.py  make_index.py
examples/: ai.py  ai3.py
go/: .gitignore  benches_c.go  go.mod  go.sum  helper.go  main.go  main_test.go
go/cmd/create_index/: main.go
go/cmd/create_trec/: main.go
go/cmd/plot_results/: main.go
src/: faiss_extension.cpp  gpu.cpp  maputils.cpp
src/gpu/: gpu.cpp
src/include/: faiss_extension.hpp  gpu.hpp  index.hpp  maputils.hpp
test/: README.md
test/nodejs/: quack_test.js
test/python/: faiss_test.py
test/sql/: faiss.test  faiss2.test  faiss3.test  faiss4.test  faiss5.test  faiss6.test  faiss7.test  faiss_add_ids_with_train copy.test  faiss_table_search.test  queries.csv  training.csv
vcpkg_ports/openblas/: portfile.cmake
